background.css
/* 
This file is used for initially rendering CSS styles, when web page is loading and DOM has not been rendered yet. 
Prevents default coloring to load in for a split second which causes bad UX.

CSS Selectors:
- Elements (div, nav, etc.)
- Class attributes: .class-name (.btn)
- IDs, unique: #id (#searchButton)

!important means forced coloring

CSS attributes & values: [attribute="value"]
* = all, div[class*="test"]
~ = specific word, [title~="flower"]
^ = whose value starts with the specified value, [class^="top"]
Read more here: https://www.w3schools.com/css/css_attribute_selectors.asp
*/


/*---DARK BACKGROUND---*/

/* Set dark background except selectors listed below */
*:not(tr, td, div[style*="background-color"], div > div > span, td > div > span, div, a[class*="mw-tmh-play"], button[class*="mw-mmv-"],
/* Text in tables: */ td > span, td > b, td > a, td > sub,
/* Screenshot & Foxy Gesture bug fix #41: */ iframe, canvas,
/* Color scheme under images, e.g: https://en.wikipedia.org/wiki/2023_Israel%E2%80%93Hamas_war#Invasion_of_the_Gaza_Strip_(27_October%E2%80%93present) */ span[class*="legend-color"],
/* Images */ img[class*="mw-file-element"],
/* Logo*/ img[class="mw-logo-wordmark"], img[class="mw-logo-tagline"]
 ),

/* AVOID: div[class*="mw"] and div since it causes black bug (GitHub issue #10) */
div[class*="mw-page-container"], div[class*="vector-header-container"], div[id*="vector-main-menu"], div[id*="vector-toc"], div[id*="mp"], div[class*="side"], div[class*="thumb"],
div[class*="row"], div[class*="mwe"], div[id*="mw-watchlink"], div[id*="toc"], div[id*="mw-head"], div[id*="mw-fr"], div[id*="content"], td[class*="infobox-subheader"],
/* Talk page EN: */ div[id*="talk"], div[id*="centralized"], div[class*="module"], div[id*="main"], td[class*="mp"], div[id*="catlinks"],
/* View history page: */ div[class*="oo-ui"], div[class*="mw-widget"],
/* Edit source page: */ div[class*="wiki"], div[class*="edit"], /* div[class*="ext"] - causes video bug */
/* Preferences page: */ div[class*="mw-html"], span[class*="oo-ui"],
/* Notifications page: */ div[class*="mw-echo"],
/* Side bar: https://en.wikipedia.org/wiki/Wikipedia */ div[class*="hidden-title"],
/* Opening image bottom bar: */ div[class*="mw-mmv"],
/* Hovering over footnotes: */ div[id*="cite_ref"],
/* Discussion notice pop up: */ div[class*="mw-message-box"],
/* Preview tool window: */ div[class*="ext-discussiontools"],
/* Wikipedia main site: */div[id="js-lang-lists"], div[class*="lang-list-container"],
/* Quotebox: */ div[class*="quotebox"], div[id*="sisterproject"],
/* Talkheader: */ div[class*="talkheader"],
/* Empty table cells */ td[class*="table-na"],
div:root
{
  background-color: #0d1117 !important;
}

/* Lighter dark background */
tr::before, img[src$=".svg.png"] {
  background-color: #21262d !important;
}



/*---TEXTS---*/

/* White text */
div > button /* Search button clicked */, input /* Text input in search field */, 
/* View history page: */ div[id*="oo"], div[class*="oo"], div[class*="mw-widget"], div[class*="mw-echo"], span,
/* Discussion notice pop up: */ div[id*="semiprotectedpagewarning"], li[class*="mw-logline-protect"],
/* Programming syntax text: https://en.wikipedia.org/wiki/%22Hello,_World!%22_program#Examples */ samp,
/* Quotes: */ blockquote > div > p, 
/* Empty table cells */ td[class*="table-na"] {
  color: #c9d1d9 !important;
}

/* Hyperlinks */
a, a > span {
  color: #58a6ff !important;
}

/* Hyperlinks not existing */
a[class*="new"] {
  color: #ff9558 !important;
}

/* Tables with light background colors - work in progress */
/* https://en.wikipedia.org/wiki/Piano_key_frequencies */ tr > td[bgcolor*="lightgray"], tr[bgcolor*="lightgray"] > td,
/* https://en.wikipedia.org/wiki/Amateur_radio_call_signs#Formation_of_an_amateur_radio_call_sign */ td[style*="#ffbb"],
/* https://en.wikipedia.org/wiki/Mineral_(nutrient) */ td[style*="#f2e829"] > span, td[style*="#ebba36"] > span, td[style*="#dd9"] > span, td[style*="#7f0"] > span, td[style*="#cf9"] > span {
  color: #0d1117 !important;
}

/*---MISCELLANEOUS---*/

/* Remove white gradient color */
div#vector-toc.vector-toc.vector-pinnable-element::after, div#vector-page-tools.vector-page-tools.vector-pinnable-element::after, div.vector-sticky-pinned-container::after {
  background: none !important;
}

/* Remove popup white gradient fade*/
.mwe-popups .mwe-popups-extract[dir='ltr']::after{
  background-image:linear-gradient(to right, rgba(13,17,23,0), #0d1117 50%) !important;
}

/* Force white line on top */
.vector-page-toolbar {
  border-top: 1px solid white;
  border-bottom: 1px solid white;
}

/* Coloring icons to white */
span[class~="vector-icon"], a[class~="vector-icon"], span[class~="oo-ui-iconElement-icon"], 
/* Checkbox icons in preferences page: */ span[id*="mw-input-wpecho-subscriptions"],
/* LaTeX formulas: */ img.mwe-math-fallback-image-display, img.mwe-math-fallback-image-inline {
  background-color: transparent !important;
  -webkit-filter: invert(1);
  filter: invert(1);
}

img[class="mw-logo-wordmark"], img[class="mw-logo-tagline"] {
  filter: invert(.7)
}

